--- a/src/app/variable.scss
+++ b/src/app/variable.scss
@@ -33,3 +33,4 @@ $oa-default-color-32: #99A3A5;
 $oa-default-color-33: #FBFBFB;
 $oa-default-color-34: #7B9FA8;
 $oa-default-color-35: #9a9a9a;
+$oa-default-color-36: #dedede;
