--- a/src/app/order/components/order-header.component.html
+++ b/src/app/order/components/order-header.component.html
@@ -90,7 +90,7 @@
           <img class="client-img" src="app/share/images/company-logo/infosys.png">
         </div>
         <!--<div>{{selectedCustomer.fromCompany}}</div>-->
-        <select  [(ngModel)]="selectedCustomerString" (ngModelChange)="getCustomerDetails($event)">
+        <select  [(ngModel)]="selectedCustomerString" (ngModelChange)="getCustomerDetails($event)" [class.notSelected]="isCustomerNotSelected">
           <option selected="selected">Choose Customer</option>
           <option *ngFor="let customer of allCustomers" [value]="customer._id">{{customer.fromCompany}}</option>
           <option>Add a New Customer</option>
@@ -132,7 +132,8 @@
         <div flex class="client-section">
           <img class="client-img" src="app/share/images/company-logo/infosys.png">
         </div>
-        <select [(ngModel)]="selectedUser"  (ngModelChange)="getUserDetails($event)">
+        <select [(ngModel)]="selectedUser" (ngModelChange)="getUserDetails($event)" >
+
           <option selected="selected">Select User</option>
           <option *ngFor="let user of allUsers" [value]="user._id">{{user.firstName}}</option>
         </select>
