--- a/src/app/order/components/order.components.scss
+++ b/src/app/order/components/order.components.scss
@@ -751,3 +751,9 @@ width: 100%;
   float: left;
   margin-left: 10px;
 }
+.empty {
+  border : 3px solid #ff0000;
+}
+.notSelected {
+  border : 3px solid #ff0000;
+}
