UI changes for order and share section

--- a/src/app/inbox/item-views/inbox.component.scss
+++ b/src/app/inbox/item-views/inbox.component.scss
@@ -107,6 +107,8 @@
 .order-compact {
   cursor: pointer;
   position: relative;
+  display: inline-block;
+  width: 100%;
 }
 .active {
   background-color: #EAEAEA;
