--- a/src/app/order/components/add-other-details.component.html
+++ b/src/app/order/components/add-other-details.component.html
@@ -1,5 +1,5 @@
-<div class="orders" *ngIf="isCustomerSelected">
-    <div style="float: left; width: 50%">
+<div class="address-section" *ngIf="isCustomerSelected">
+    <div class="shipping-address">
        <h3> Shipping Address</h3>
           <p>{{currentOrder.customer.fromCompany}}</p>
           <p>{{currentOrder.customer.shippingAddress[0].line1}},</p>
@@ -8,7 +8,7 @@
           <p>{{currentOrder.customer.shippingAddress[0].city}}, </p>
           <p>{{currentOrder.customer.shippingAddress[0].country}}, </p>
     </div>
-    <div style="float: left; width: 50%">
+    <div class="billing-address">
        <h3> Billing Address</h3>
           <p>{{currentOrder.customer.fromCompany}},
           <p>{{currentOrder.customer.billingAddress[0].line1}},</p>
@@ -19,6 +19,6 @@
     </div>
   <div *ngIf="displayError && !displaySuccess">{{errorMessage}}</div>
   <div *ngIf="!displayError && displaySuccess">{{successMessage}}</div>
-  <button *ngIf="!leadId" md-raised-button class="button md-raised md-primary" (click)="placeOrder()">Place Order</button>
-  <button *ngIf="leadId" md-raised-button class="button md-raised md-primary" (click)="editOrder()">Edit Order</button>
+  <button *ngIf="!leadId" class="button" (click)="placeOrder()">Place Order</button>
+  <button *ngIf="leadId" class="button" (click)="editOrder()">Edit Order</button>
 </div>
