--- a/src/app/order/components/order-header.component.html
+++ b/src/app/order/components/order-header.component.html
@@ -74,7 +74,7 @@
            </div>
          </div>
 
-         <button class="crate-button" (click)="createCustomer()">Add New</button>
+         <button class="button" (click)="createCustomer()">Add New</button>
         </div>
      </div>
    </div>
