UI changes fixed

--- a/src/app/inbox/item-views/audio-compact-view.html
+++ b/src/app/inbox/item-views/audio-compact-view.html
@@ -6,10 +6,10 @@
   </div>
   <div class="list-containt">
     <p class="list-label">{{ audioContent.subject }}</p>
-    <audio controls>
+    <!-- <audio controls>
       <source [src]="audioContent.attachment" type="audio/mpeg">
       Your browser does not support the audio tag.
-    </audio>
+    </audio> -->
   </div>
   <div class="user-right-section">
     <div class="user-avtar">
