--- a/src/app/main-app.scss
+++ b/src/app/main-app.scss
@@ -1,3 +1,5 @@
 @import "../../node_modules/ng2-material/all.scss";
 @import "../../node_modules/ng2-material/font/font.scss";
-
+body {
+	outline : none;
+}
